space-around to fix margin too wide on the right

--- a/css/3-layouts/cards.sass
+++ b/css/3-layouts/cards.sass
@@ -1,5 +1,5 @@
 .cards
-  @include justify-content(center)
+  @include justify-content(space-around)
 
 .card
   background: white
@@ -22,4 +22,3 @@
     padding: 0 1.0em 0.5em 1.0em
     font-weight: normal
     font-style: normal
-
